[gd_scene load_steps=7 format=3 uid="uid://c3hwphsyo7366"]

[ext_resource type="Theme" uid="uid://ciciv61w8qmyy" path="res://Theme/MainTheme.tres" id="1_c7eq5"]
[ext_resource type="Script" path="res://Script/Dialog/TradeDialog.gd" id="2_hihif"]
[ext_resource type="Texture2D" uid="uid://dmcq5a0wdvgao" path="res://Image/Arrows/arrow_left.png" id="3_hv4xj"]
[ext_resource type="Texture2D" uid="uid://c6n1g3oovtaua" path="res://Image/Arrows/arrow_left_pressed.png" id="4_cjhns"]
[ext_resource type="Texture2D" uid="uid://buc4e2upd0uct" path="res://Image/Arrows/arrow_right.png" id="5_o37td"]
[ext_resource type="Texture2D" uid="uid://2vlx214adpcw" path="res://Image/Arrows/arrow_right_pressed.png" id="6_l5t3w"]

[node name="Trade" type="ConfirmationDialog"]
process_mode = 3
title = "WANTTOTRADE"
position = Vector2i(0, 36)
size = Vector2i(600, 600)
visible = true
theme = ExtResource("1_c7eq5")
ok_button_text = "TRADE"
cancel_button_text = "CANCEL"
script = ExtResource("2_hihif")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 592.0
offset_bottom = 542.0
theme_type_variation = &"EvenMargin10"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HeaderHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CurrentLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CURRENT"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "AVAILABLE"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SpaceHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpaceUsedPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/SpaceHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="SpaceUsedColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/SpaceHBoxContainer/SpaceUsedPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
color = Color(1, 0, 0, 0.47451)

[node name="SpaceUsedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/SpaceHBoxContainer/SpaceUsedPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 1e+06
alignment = 1
editable = false

[node name="SpaceLabel" type="Label" parent="MarginContainer/VBoxContainer/SpaceHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "SPACE"

[node name="SpaceAvailablePanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/SpaceHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="SpaceAvailableSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/SpaceHBoxContainer/SpaceAvailablePanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 1e+06
alignment = 1
editable = false

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DecoratedContainer"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AirHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AirOwnedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/AirHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 100000.0
alignment = 1
select_all_on_focus = true

[node name="AirBuyTextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/AirHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("3_hv4xj")
texture_pressed = ExtResource("4_cjhns")
ignore_texture_size = true
stretch_mode = 5

[node name="AirLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/AirHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "AIR"

[node name="AirSellTextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/AirHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("5_o37td")
texture_pressed = ExtResource("6_l5t3w")
ignore_texture_size = true
stretch_mode = 5

[node name="AirAvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/AirHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TradeLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="EnergyHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnergyOwnedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/EnergyHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 10000.0
alignment = 1

[node name="EnergyLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/EnergyHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "ENERGY"

[node name="EnergyAvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/EnergyHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TradeLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FishHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FishOwnedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/FishHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 10000.0
alignment = 1

[node name="FishLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/FishHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "FISH"

[node name="FishAvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/FishHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TradeLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FoodHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FoodOwnedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/FoodHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 10000.0
alignment = 1

[node name="FoodLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/FoodHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "FOOD"

[node name="FoodAvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/FoodHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TradeLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FuelHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FuelOwnedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/FuelHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 10000.0
alignment = 1

[node name="FuelLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/FuelHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "FUEL"

[node name="FuelAvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/FuelHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TradeLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PlantHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlantOwnedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PlantHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 10000.0
alignment = 1

[node name="PlantLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PlantHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "PLANTS"

[node name="PlantAvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/PlantHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TradeLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SparePartHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SparePartOwnedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/SparePartHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 10000.0
alignment = 1

[node name="SparePartLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/SparePartHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "SPAREPARTS"

[node name="SparePartAvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/SparePartHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TradeLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="WasteHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WasteOwnedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/WasteHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 10000.0
alignment = 1

[node name="WasteLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/WasteHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "WASTE"

[node name="WasteAvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/WasteHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TradeLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="WaterHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WaterOwnedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/WaterHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 10000.0
alignment = 1

[node name="WaterLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/WaterHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "WATER"

[node name="WaterAvailableLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer/VBoxContainer/WaterHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TradeLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MoneyHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoneyOwnedPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MoneyHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="MoneyOwnedColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/MoneyHBoxContainer/MoneyOwnedPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
color = Color(1, 0, 0, 0.47451)

[node name="MoneyOwnedSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/MoneyHBoxContainer/MoneyOwnedPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 1e+06
alignment = 1
editable = false

[node name="MoneyLabel" type="Label" parent="MarginContainer/VBoxContainer/MoneyHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "MONEY"

[node name="MoneyAvailablePanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MoneyHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="MoneyAvailableColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/MoneyHBoxContainer/MoneyAvailablePanelContainer"]
unique_name_in_owner = true
layout_mode = 2
color = Color(1, 0, 0, 0.47451)

[node name="MoneyAvailableSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/MoneyHBoxContainer/MoneyAvailablePanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NoArrows"
max_value = 1e+06
alignment = 1
editable = false
